--- a/src/gaugeface/package.json
+++ b/src/gaugeface/package.json
@@ -7,7 +7,9 @@
     "johnny-five": "^0.9.17",
     "async": "1.5.2",
     "mqtt": "1.7.0",
-    "serialport":"2.0.6"
+    "serialport":"2.0.6",
+    "config":"1.19.0",
+    "express":"4.13.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
