--- a/src/hamsta/package.json
+++ b/src/hamsta/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "gaugeface",
+  "name": "hamsta",
   "version": "1.0.0",
-  "description": "JohnnyFive based Raspberry Docker Container toys",
+  "description": "Hamster wheel counter for Stutz Appliances",
   "main": "main.js",
   "dependencies": {
-    "johnny-five": "^0.9.17",
-    "async": "1.5.2",
-    "mqtt": "1.7.0",
-    "serialport":"2.0.6",
-    "config":"1.19.0",
-    "express":"4.13.4"
+    "../lib/StutzButlerExtension": "1.0.0",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
