--- a/src/lib/StutzButlerExtension/package.json
+++ b/src/lib/StutzButlerExtension/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "gaugeface",
+  "name": "stutzbutler-extension",
   "version": "1.0.0",
-  "description": "JohnnyFive based Raspberry Docker Container toys",
-  "main": "main.js",
+  "description": "Common library for Stutz Butler extensions connected to Hubs",
+  "main": "StutzButlerExtension.js",
   "dependencies": {
     "johnny-five": "^0.9.17",
     "async": "1.5.2",
     "mqtt": "1.7.0",
     "serialport":"2.0.6",
-    "config":"1.19.0",
-    "express":"4.13.4"
+    "raspi-io":"5.2.0",
+    "express":"4.13.4",
+    "raspi-io":"5.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
