--- a/src/lib/StutzButlerExtension/package.json
+++ b/src/lib/StutzButlerExtension/package.json
@@ -10,7 +10,8 @@
     "serialport":"2.0.6",
     "raspi-io":"5.2.0",
     "express":"4.13.4",
-    "raspi-io":"5.2.0"
+    "raspi-io":"5.2.0",
+    "events":"1.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
